--- a/Thesis/Thesis_Ludo.bib
+++ b/Thesis/Thesis_Ludo.bib
@@ -231,6 +231,18 @@ Uncertainty},
    type = {Thesis}
 }
 
+@article{Hampel1998,
+   author = {Hampel, Frank and Zurich, Eth},
+   title = {Is statistics too difficult?},
+   journal = {Canadian Journal of Statistics},
+   volume = {26},
+   number = {3},
+   pages = {497-513},
+   ISSN = {0319-5724},
+   year = {1998},
+   type = {Journal Article}
+}
+
 @article{Hu2016,
    author = {Hu, Qinghua and Zhang, Rujia and Zhou, Yucan},
    title = {Transfer learning for short-term wind speed prediction with deep neural networks},
@@ -314,6 +326,14 @@ Batch size},
    type = {Journal Article}
 }
 
+@misc{KNMI
+   author = {KNMI},
+   title = {Monthly weather overviews in the Netherlands},
+   number = {April 11th 2022},
+   url = {https://www.knmi.nl/nederland-nu/klimatologie/gegevens/mow},
+   type = {Web Page}
+}
+
 @article{Leijnse2007,
    author = {Leijnse, H. and Uijlenhoet, R. and Stricker, J. N. M.},
    title = {Hydrometeorological application of a microwave link: 2. Precipitation},
@@ -366,6 +386,24 @@ Wet antennas},
    title = {Massively Parellel Hyperparameter Tuning (Unpublished)},
    year = {2018},
    type = {Conference Paper}
+}
+
+@article{Lin2016,
+   author = {Lin, Lu and Shi, Yufeng and Wang, Xin and Yang, Shuzhen},
+   title = {k-sample upper expectation linear regression—Modeling, identifiability, estimation and prediction},
+   journal = {Journal of Statistical Planning and Inference},
+   volume = {170},
+   pages = {15-26},
+   abstract = {Although nonlinear expectation theory has attracted much attention in literature, the related statistical models and statistical inferences have not yet been well established. The goal of this paper is to construct a k-sample upper expectation regression, a special nonlinear expectation regression, and then investigate its statistical properties. First, under the framework of k-sample, the upper expectation linear regression is defined and its identifiability is given. Then, based on the newly defined model together with k-sample, several estimations and predictions are suggested, consistency and asymptotic normality are established. Finally, simulation studies and a real financial example are carried out to illustrate the new methodology. All notions and methodologies developed are essentially different from classical ones and can be thought of as a foundation for general nonlinear expectation statistics.},
+   keywords = {Upper expectation
+Linear regression
+-sample
+Distribution uncertainty
+Parameter estimation},
+   ISSN = {0378-3758},
+   DOI = {https://doi.org/10.1016/j.jspi.2015.09.002},
+   year = {2016},
+   type = {Journal Article}
 }
 
 @article{Moraux2019,
@@ -697,6 +735,22 @@ classification},
    ISSN = {1867-8610},
    DOI = {10.5194/amt-2021-34},
    year = {2021},
+   type = {Journal Article}
+}
+
+@article{2019,
+   author = {Xu, Qing and Xuan, Xiaohua},
+   title = {Nonlinear regression without i.i.d. assumption},
+   journal = {Probability, Uncertainty and Quantitative Risk},
+   volume = {4},
+   number = {1},
+   pages = {8},
+   note = {(Michael)},
+   abstract = {In this paper, we consider a class of nonlinear regression problems without the assumption of being independent and identically distributed. We propose a correspondent mini-max problem for nonlinear regression and give a numerical algorithm. Such an algorithm can be applied in regression and machine learning problems, and yields better results than traditional least squares and machine learning methods.},
+   ISSN = {2367-0126},
+   DOI = {10.1186/s41546-019-0042-6},
+   url = {https://doi.org/10.1186/s41546-019-0042-6},
+   year = {2019},
    type = {Journal Article}
 }
 
